# catorce_capital

./: .gitignore  CLAUDE.md  DOC.md  README.md  out.json
crypto_portfolio/: .gitignore  CLAUDE.md  Dockerfile  README.md  SESSION_COMPENDIUM.md  TECHNICAL_REFERENCE.md  build_and_push.sh  build_layer.sh  cloudflare-worker.js  conftest.py  dashboard_public.html  pyproject.toml  requirements-ecs.txt  requirements.txt
crypto_portfolio/.github/workflows/: ci.yml
crypto_portfolio/docs/: ARCH-001-triple-mode-spec-v2.md  ARCH-001-triple-mode-spec.md
crypto_portfolio/infra/terraform/: DEPLOY.md  api.tf  audit_lambda.tf  ecs.tf  eventbridge.tf  iam.tf  lambda.tf  main.tf  monitoring.tf  network.tf  oidc.tf  outputs.tf  response.json  s3.tf  (+6 more)
crypto_strategy_lab/: bitso_edge_scanner.py  bitso_microstructure_edge.py  crypto_strategy_lab_wiki.md  master_leadlag_research.py  pyproject.toml  sweep_ichimoku.py  test_strategy.py
crypto_strategy_lab/config/: assets.yaml  assets.yml  strategies.yaml
crypto_strategy_lab/data/: build_exchange_comparison.py  build_features.py  build_features_backup.py  build_features_hl.py  build_features_xgb_hl.py  download_binance_klines.py  download_market_indicators.py  maker_cost_model.py  validate_features.py  validate_features_bitso.py  validate_features_hl.py
crypto_strategy_lab/evaluation/: evaluator.py
crypto_strategy_lab/strategies/: base_strategy.py  bb_squeeze_breakout.py  funding_carry_harvest.py  funding_momentum.py  funding_rate_contrarian.py  oi_divergence.py  spread_compression.py  twap_reversion.py  volatility_reversion.py
(+323 files in other folders)
