[project]
name = "crypto-portfolio"
version = "0.1.0"
description = ""
authors = [
    {name = "“Carlos",email = "“carlostabaresb@gmail.com“"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (==2.31.0)",
    "urllib3 (==2.0.7)",
    "pandas (==2.1.4)",
    "pyarrow (==14.0.2)",
    "boto3 (==1.34.14)",
    "numpy (==1.26.3)",
    "cvxpy (>=1.5.0)",
    "scipy (==1.11.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
pytest-mock = "3.12.0"
requests-mock = "1.11.0"

[tool.pytest.ini_options]
pythonpath = ["src"]