[project]
name = "models"
version = "0.1.0"
description = ""
authors = [
    {name = "“Carlos",email = "“carlostabaresb@gmail.com“"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel (>=7.1.0,<8.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "ta (>=0.11.0,<0.12.0)",
    "pyarrow (>=4,<23)",
    "s3fs (>=2026.1.0,<2027.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "xgboost (>=3.1.3,<4.0.0)",
    "mlflow (>=3.8.1,<4.0.0)",
    "hyperopt (>=0.2.7,<0.3.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
